# skill-retrieval-mcp

./: .gitignore  .mcp.example.json  README.md  pyproject.toml
docs/: RETRIEVAL_QUALITY_EVAL.md  SELF_AUDIT.md  STRESS_TEST_ISSUES.md  skill-retrieval-mcp-design.md
reports/stress/: latest-stress-summary.json
rust-version/: Cargo.toml  README.md
rust-version/src/: engine.rs  evaluation.rs  lib.rs  main.rs  mcp.rs  models.rs  parser.rs  text.rs
rust-version/tests/: cache_validation_budget.rs  core_engine.rs  evaluation_cli.rs  mcp_stdio.rs
scripts/: evaluate_retrieval_quality.py  stress_skill_retrieval.py
src/skill_retrieval_mcp/: __init__.py  cli.py  core.py  evaluation.py  models.py  server.py
tests/: conftest.py  test_builtin_skill_roots.py  test_cache_perf.py  test_load.py  test_mcp_integration.py  test_retrieval_quality.py  test_search.py  test_self_audit_regressions.py  test_stress_issue_regressions.py
tests/fixtures/retrieval_quality/: README.md  cases.jsonl
tests/fixtures/retrieval_quality/skills/autonomous-ai-agents/codex/: SKILL.md
tests/fixtures/retrieval_quality/skills/autonomous-ai-agents/hermes-agent/: SKILL.md
tests/fixtures/retrieval_quality/skills/codex-builtins/ast-grep/: SKILL.md
tests/fixtures/retrieval_quality/skills/codex-builtins/codex-github/: SKILL.md
tests/fixtures/retrieval_quality/skills/codex-builtins/community-evals/: SKILL.md
tests/fixtures/retrieval_quality/skills/codex-builtins/gh-address-comments/: SKILL.md
tests/fixtures/retrieval_quality/skills/codex-builtins/gh-fix-ci/: SKILL.md
(+43 files in other folders)
